@@ -16,8 +16,10 @@
 
 package org.springframework.expression.spel;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.GregorianCalendar;
 import java.util.HashMap;
@@ -31,6 +33,7 @@ import org.springframework.expression.Expression;
 import org.springframework.expression.ExpressionParser;
 import org.springframework.expression.ParserContext;
 import org.springframework.expression.spel.standard.SpelExpressionParser;
+import org.springframework.expression.spel.support.SimpleEvaluationContext;
 import org.springframework.expression.spel.support.StandardEvaluationContext;
 import org.springframework.expression.spel.testresources.Inventor;
 import org.springframework.expression.spel.testresources.PlaceOfBirth;
@@ -39,12 +42,13 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.within;
 
 /**
- * Test the examples specified in the documentation.
+ * Test the examples used in the reference documentation.
  *
- * <p>NOTE: any outgoing changes from this file upon synchronizing with the repo may indicate that
- * you need to update the documentation too !
+ * <p>NOTE: any changes in this file may indicate that you need to update the
+ * documentation too!
  *
  * @author Andy Clement
+ * @author Sam Brannen
  */
 @SuppressWarnings("rawtypes")
 class SpelDocumentationTests extends AbstractExpressionTests {
@@ -58,14 +62,14 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		c.set(1856, 7, 9);
 		tesla = new Inventor("Nikola Tesla", c.getTime(), "Serbian");
 		tesla.setPlaceOfBirth(new PlaceOfBirth("SmilJan"));
-		tesla.setInventions(new String[] { "Telephone repeater", "Rotating magnetic field principle",
+		tesla.setInventions("Telephone repeater", "Rotating magnetic field principle",
 				"Polyphase alternating-current system", "Induction motor", "Alternating-current power transmission",
-				"Tesla coil transformer", "Wireless communication", "Radio", "Fluorescent lights" });
+				"Tesla coil transformer", "Wireless communication", "Radio", "Fluorescent lights");
 
 		pupin = new Inventor("Pupin", c.getTime(), "Idvor");
 		pupin.setPlaceOfBirth(new PlaceOfBirth("Idvor"));
-
 	}
+
 
 	@Test
 	void methodInvocation() {
@@ -83,11 +87,11 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void rootObject() throws Exception {
+	void rootObject() {
 		GregorianCalendar c = new GregorianCalendar();
 		c.set(1856, 7, 9);
 
-		//  The constructor arguments are name, birthday, and nationaltiy.
+		// The constructor arguments are name, birthday, and nationality.
 		Inventor tesla = new Inventor("Nikola Tesla", c.getTime(), "Serbian");
 
 		ExpressionParser parser = new SpelExpressionParser();
@@ -101,7 +105,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void equalityCheck() throws Exception {
+	void equalityCheck() {
 		ExpressionParser parser = new SpelExpressionParser();
 
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -121,13 +125,13 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 
 	// Section 7.5
 	@Test
-	void literals() throws Exception {
+	void literals() {
 		ExpressionParser parser = new SpelExpressionParser();
 
 		String helloWorld = (String) parser.parseExpression("'Hello World'").getValue(); // evals to "Hello World"
 		assertThat(helloWorld).isEqualTo("Hello World");
 
-		double avogadrosNumber  = (Double) parser.parseExpression("6.0221415E+23").getValue();
+		double avogadrosNumber = (Double) parser.parseExpression("6.0221415E+23").getValue();
 		assertThat(avogadrosNumber).isCloseTo(6.0221415E+23, within((double) 0));
 
 		int maxValue = (Integer) parser.parseExpression("0x7FFFFFFF").getValue();  // evals to 2147483647
@@ -141,7 +145,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void propertyAccess() throws Exception {
+	void propertyAccess() {
 		EvaluationContext context = TestScenarioCreator.getTestEvaluationContext();
 		int year = (Integer) parser.parseExpression("Birthdate.Year + 1900").getValue(context); // 1856
 		assertThat(year).isEqualTo(1856);
@@ -151,7 +155,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void propertyNavigation() throws Exception {
+	void propertyNavigation() {
 		ExpressionParser parser = new SpelExpressionParser();
 
 		// Inventions Array
@@ -179,7 +183,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void dictionaryAccess() throws Exception {
+	void dictionaryAccess() {
 		StandardEvaluationContext societyContext = new StandardEvaluationContext();
 		societyContext.setRootObject(new IEEE());
 		// Officer's Dictionary
@@ -198,13 +202,10 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 
 		Inventor i2 = parser.parseExpression("reverse[0]['advisors'][0]").getValue(societyContext,Inventor.class);
 		assertThat(i2.getName()).isEqualTo("Nikola Tesla");
-
 	}
 
-	// 7.5.3
-
 	@Test
-	void methodInvocation2() throws Exception {
+	void methodInvocation2() {
 		// string literal, evaluates to "bc"
 		String c = parser.parseExpression("'abc'.substring(1, 3)").getValue(String.class);
 		assertThat(c).isEqualTo("bc");
@@ -216,10 +217,8 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		assertThat(isMember).isTrue();
 	}
 
-	// 7.5.4.1
-
 	@Test
-	void relationalOperators() throws Exception {
+	void relationalOperators() {
 		boolean result = parser.parseExpression("2 == 2").getValue(Boolean.class);
 		assertThat(result).isTrue();
 		// evaluates to false
@@ -232,7 +231,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void otherOperators() throws Exception {
+	void otherOperators() {
 		// evaluates to false
 		boolean falseValue = parser.parseExpression("'xyz' instanceof T(int)").getValue(Boolean.class);
 		assertThat(falseValue).isFalse();
@@ -246,11 +245,8 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		assertThat(falseValue).isFalse();
 	}
 
-	// 7.5.4.2
-
 	@Test
-	void logicalOperators() throws Exception {
-
+	void logicalOperators() {
 		StandardEvaluationContext societyContext = new StandardEvaluationContext();
 		societyContext.setRootObject(new IEEE());
 
@@ -260,7 +256,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		boolean falseValue = parser.parseExpression("true and false").getValue(Boolean.class);
 		assertThat(falseValue).isFalse();
 		// evaluates to true
-		String expression =  "isMember('Nikola Tesla') and isMember('Mihajlo Pupin')";
+		String expression = "isMember('Nikola Tesla') and isMember('Mihajlo Pupin')";
 		boolean trueValue = parser.parseExpression(expression).getValue(societyContext, Boolean.class);
 
 		// -- OR --
@@ -270,7 +266,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		assertThat(trueValue).isTrue();
 
 		// evaluates to true
-		expression =  "isMember('Nikola Tesla') or isMember('Albert Einstien')";
+		expression = "isMember('Nikola Tesla') or isMember('Albert Einstien')";
 		trueValue = parser.parseExpression(expression).getValue(societyContext, Boolean.class);
 		assertThat(trueValue).isTrue();
 
@@ -280,17 +276,14 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		falseValue = parser.parseExpression("!true").getValue(Boolean.class);
 		assertThat(falseValue).isFalse();
 
-
 		// -- AND and NOT --
-		expression =  "isMember('Nikola Tesla') and !isMember('Mihajlo Pupin')";
+		expression = "isMember('Nikola Tesla') and !isMember('Mihajlo Pupin')";
 		falseValue = parser.parseExpression(expression).getValue(societyContext, Boolean.class);
 		assertThat(falseValue).isFalse();
 	}
 
-	// 7.5.4.3
-
 	@Test
-	void numericalOperators() throws Exception {
+	void numericalOperators() {
 		// Addition
 		int two = parser.parseExpression("1 + 1").getValue(Integer.class); // 2
 		assertThat(two).isEqualTo(2);
@@ -299,28 +292,28 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		assertThat(testString).isEqualTo("test string");
 
 		// Subtraction
-		int four =  parser.parseExpression("1 - -3").getValue(Integer.class); // 4
+		int four = parser.parseExpression("1 - -3").getValue(Integer.class); // 4
 		assertThat(four).isEqualTo(4);
 
 		double d = parser.parseExpression("1000.00 - 1e4").getValue(Double.class); // -9000
 		assertThat(d).isCloseTo(-9000.0d, within((double) 0));
 
 		// Multiplication
-		int six =  parser.parseExpression("-2 * -3").getValue(Integer.class); // 6
+		int six = parser.parseExpression("-2 * -3").getValue(Integer.class); // 6
 		assertThat(six).isEqualTo(6);
 
 		double twentyFour = parser.parseExpression("2.0 * 3e0 * 4").getValue(Double.class); // 24.0
 		assertThat(twentyFour).isCloseTo(24.0d, within((double) 0));
 
 		// Division
-		int minusTwo =  parser.parseExpression("6 / -3").getValue(Integer.class); // -2
+		int minusTwo = parser.parseExpression("6 / -3").getValue(Integer.class); // -2
 		assertThat(minusTwo).isEqualTo(-2);
 
 		double one = parser.parseExpression("8.0 / 4e0 / 2").getValue(Double.class); // 1.0
 		assertThat(one).isCloseTo(1.0d, within((double) 0));
 
 		// Modulus
-		int three =  parser.parseExpression("7 % 4").getValue(Integer.class); // 3
+		int three = parser.parseExpression("7 % 4").getValue(Integer.class); // 3
 		assertThat(three).isEqualTo(3);
 
 		int oneInt = parser.parseExpression("8 / 5 % 2").getValue(Integer.class); // 1
@@ -331,10 +324,8 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		assertThat(minusTwentyOne).isEqualTo(-21);
 	}
 
-	// 7.5.5
-
 	@Test
-	void assignment() throws Exception {
+	void assignment() {
 		Inventor inventor = new Inventor();
 		StandardEvaluationContext inventorContext = new StandardEvaluationContext();
 		inventorContext.setRootObject(inventor);
@@ -342,27 +333,23 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		parser.parseExpression("foo").setValue(inventorContext, "Alexander Seovic2");
 
 		assertThat(parser.parseExpression("foo").getValue(inventorContext,String.class)).isEqualTo("Alexander Seovic2");
-		// alternatively
 
+		// alternatively
 		String aleks = parser.parseExpression("foo = 'Alexandar Seovic'").getValue(inventorContext, String.class);
 		assertThat(parser.parseExpression("foo").getValue(inventorContext,String.class)).isEqualTo("Alexandar Seovic");
 		assertThat(aleks).isEqualTo("Alexandar Seovic");
 	}
 
-	// 7.5.6
-
 	@Test
-	void types() throws Exception {
+	void types() {
 		Class<?> dateClass = parser.parseExpression("T(java.util.Date)").getValue(Class.class);
 		assertThat(dateClass).isEqualTo(Date.class);
 		boolean trueValue = parser.parseExpression("T(java.math.RoundingMode).CEILING < T(java.math.RoundingMode).FLOOR").getValue(Boolean.class);
 		assertThat(trueValue).isTrue();
 	}
 
-	// 7.5.7
-
 	@Test
-	void constructors() throws Exception {
+	void constructors() {
 		StandardEvaluationContext societyContext = new StandardEvaluationContext();
 		societyContext.setRootObject(new IEEE());
 		Inventor einstein =
@@ -372,38 +359,64 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		parser.parseExpression("Members2.add(new org.springframework.expression.spel.testresources.Inventor('Albert Einstein', 'German'))").getValue(societyContext);
 	}
 
-	// 7.5.8
-
 	@Test
-	void variables() throws Exception {
+	void variables() {
 		Inventor tesla = new Inventor("Nikola Tesla", "Serbian");
-		StandardEvaluationContext context = new StandardEvaluationContext();
+
+		EvaluationContext context = SimpleEvaluationContext.forReadWriteDataBinding().build();
 		context.setVariable("newName", "Mike Tesla");
 
-		context.setRootObject(tesla);
+		parser.parseExpression("name = #newName").getValue(context, tesla);
 
-		parser.parseExpression("foo = #newName").getValue(context);
-
-		assertThat(tesla.getFoo()).isEqualTo("Mike Tesla");
+		assertThat(tesla.getName()).isEqualTo("Mike Tesla");
 	}
 
 	@Test
 	@SuppressWarnings("unchecked")
-	void specialVariables() throws Exception {
-		// create an array of integers
-		List<Integer> primes = Arrays.asList(2, 3, 5, 7, 11, 13, 17);
+	void thisVariable() {
+		// Create a list of prime integers.
+		List<Integer> primes = List.of(2, 3, 5, 7, 11, 13, 17);
 
-		// create parser and set variable 'primes' as the array of integers
+		// Create parser and set variable 'primes' as the list of integers.
 		ExpressionParser parser = new SpelExpressionParser();
-		StandardEvaluationContext context = new StandardEvaluationContext();
-		context.setVariable("primes",primes);
+		EvaluationContext context = SimpleEvaluationContext.forReadWriteDataBinding().build();
+		context.setVariable("primes", primes);
 
-		// all prime numbers > 10 from the list (using selection ?{...})
-		List<Integer> primesGreaterThanTen = (List<Integer>) parser.parseExpression("#primes.?[#this>10]").getValue(context);
-		assertThat(primesGreaterThanTen.toString()).isEqualTo("[11, 13, 17]");
+		// Select all prime numbers > 10 from the list (using selection ?{...}).
+		String expression = "#primes.?[#this > 10]";
+
+		// Evaluates to a list containing [11, 13, 17].
+		List<Integer> primesGreaterThanTen =
+				parser.parseExpression(expression).getValue(context, List.class);
+
+		assertThat(primesGreaterThanTen).containsExactly(11, 13, 17);
 	}
 
-	// 7.5.9
+	@Test
+	@SuppressWarnings("unchecked")
+	void thisAndRootVariables() {
+		// Create parser and evaluation context.
+		ExpressionParser parser = new SpelExpressionParser();
+		EvaluationContext context = SimpleEvaluationContext.forReadWriteDataBinding().build();
+
+		// Create an inventor to use as the root context object.
+		Inventor tesla = new Inventor("Nikola Tesla");
+		tesla.setInventions("Telephone repeater", "Tesla coil transformer");
+
+		// Iterate over all inventions of the Inventor referenced as the #root
+		// object, and generate a list of strings whose contents take the form
+		// "<inventor's name> invented the <invention>." (using projection !{...}).
+		String expression = "#root.inventions.![#root.name + ' invented the ' + #this + '.']";
+
+		// Evaluates to a list containing:
+		// Nikola Tesla invented the Telephone repeater.
+		// Nikola Tesla invented the Tesla coil transformer.
+		List<String> results = parser.parseExpression(expression).getValue(context, tesla, List.class);
+
+		assertThat(results).containsExactly(
+				"Nikola Tesla invented the Telephone repeater.",
+				"Nikola Tesla invented the Tesla coil transformer.");
+	}
 
 	@Test
 	void functions() throws Exception {
@@ -415,10 +428,40 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		assertThat(helloWorldReversed).isEqualTo("dlrow olleh");
 	}
 
-	// 7.5.10
+	@Test
+	void methodHandlesNotBound() throws Throwable {
+		ExpressionParser parser = new SpelExpressionParser();
+		StandardEvaluationContext context = new StandardEvaluationContext();
+
+		MethodHandle mh = MethodHandles.lookup().findVirtual(String.class, "formatted",
+				MethodType.methodType(String.class, Object[].class));
+		context.setVariable("message", mh);
+
+		String message = parser.parseExpression("#message('Simple message: <%s>', 'Hello World', 'ignored')")
+				.getValue(context, String.class);
+		assertThat(message).isEqualTo("Simple message: <Hello World>");
+	}
 
 	@Test
-	void ternary() throws Exception {
+	void methodHandlesFullyBound() throws Throwable {
+		ExpressionParser parser = new SpelExpressionParser();
+		StandardEvaluationContext context = new StandardEvaluationContext();
+
+		String template = "This is a %s message with %s words: <%s>";
+		Object varargs = new Object[] { "prerecorded", 3, "Oh Hello World!", "ignored" };
+		MethodHandle mh = MethodHandles.lookup().findVirtual(String.class, "formatted",
+						MethodType.methodType(String.class, Object[].class))
+				.bindTo(template)
+				.bindTo(varargs); //here we have to provide arguments in a single array binding
+		context.setVariable("message", mh);
+
+		String message = parser.parseExpression("#message()")
+				.getValue(context, String.class);
+		assertThat(message).isEqualTo("This is a prerecorded message with 3 words: <Oh Hello World!>");
+	}
+
+	@Test
+	void ternary() {
 		String falseString = parser.parseExpression("false ? 'trueExp' : 'falseExp'").getValue(String.class);
 		assertThat(falseString).isEqualTo("falseExp");
 
@@ -437,11 +480,9 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		// queryResultString = "Nikola Tesla is a member of the IEEE Society"
 	}
 
-	// 7.5.11
-
 	@Test
 	@SuppressWarnings("unchecked")
-	void selection() throws Exception {
+	void selection() {
 		StandardEvaluationContext societyContext = new StandardEvaluationContext();
 		societyContext.setRootObject(new IEEE());
 		List<Inventor> list = (List<Inventor>) parser.parseExpression("Members2.?[nationality == 'Serbian']").getValue(societyContext);
@@ -449,10 +490,8 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 		assertThat(list.get(0).getName()).isEqualTo("Nikola Tesla");
 	}
 
-	// 7.5.12
-
 	@Test
-	void templating() throws Exception {
+	void templating() {
 		String randomPhrase =
 				parser.parseExpression("random number is ${T(java.lang.Math).random()}", new TemplatedParserContext()).getValue(String.class);
 		assertThat(randomPhrase).startsWith("random number");
